--- a/templates/email_app/index.html
+++ b/templates/email_app/index.html
@@ -709,7 +709,7 @@
                     if (data.success && data.categories && data.categories.length > 0) {
                         data.categories.forEach(category => {
                             const option = document.createElement('option');
-                            option.value = category.category_name;
+                            option.value = category.category_id;
                             option.textContent = `${category.category_name} (${category.category_id}) - ${category.contact_count} contacts`;
                             categorySelect.appendChild(option);
                         });
